add saber math no fin

--- a/toeic/toeic.css
+++ b/toeic/toeic.css
@@ -16,6 +16,7 @@ header{
 footer{
     text-align: center;
     background-color: rgb(189, 82, 93);
+    color: rgb(203, 220, 220);
     padding: 30px 0px;
     font-family: "Nico Moji";
 }
