--- a/toeic/toeic.css
+++ b/toeic/toeic.css
@@ -1,8 +1,43 @@
 *{
-    margin:0; padding:0;
+    margin:0; 
+    text-align: center;
 }
 
-.wf-nicomoji { font-family: "Nico Moji"; }
+a{
+    text-decoration: none;
+}
+
+p{
+    margin: 5px 0;
+}
+
+.top_main{
+    margin-top: 10%;
+}
+
+input[type="submit"]{
+    position: relative;
+    display: inline-block;
+    font-weight: bold;
+    padding: 10px 30px;
+    text-decoration: none;
+    color: #00BCD4;
+    background: #ECECEC;
+    transition: .4s;
+    font-size: 20px;
+}
+
+input[type="submit"]:ctive{
+    background: #00bcd4;
+    color: white;
+}
+
+input[type="text"]{
+    padding: 10px 10px;
+    font-size: 20px;
+}
+
+
 
 header{
     background-color: #176A84;
@@ -25,4 +60,47 @@ footer{
     background-color: rgb(242, 242, 242);
     padding: 20px 0px;
     font-family: 'Kosugi Maru', sans-serif;
+}
+
+.once , .number , .target{
+    margin: 50px 0px;
+}
+
+.detail{
+    margin: 2em 0;
+    padding: 0;
+}
+
+.detail label{
+    padding: 15px;
+    font-weight: bold;
+    border: solid 2px black;
+    cursor :pointer;
+}
+
+.detail label:hover{
+    background: #efefef; 
+}
+
+.detail input{
+    display: none;
+}
+
+.detail .hidden_detail{
+    height: 0;
+    padding: 0;
+    overflow: hidden;
+    opacity: 0;
+    transition: 0.8s;
+}
+
+.detail input:checked ~ .hidden_detail{
+    padding: 30px 0;
+    height: auto;
+    opacity: 1;
+}
+
+
+.koukoku{
+    margin: 100px;
 }
